--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "img/fm-192.png",
+      "src": "assets/img/fm-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "img/fm-512.png",
+      "src": "assets/img/fm-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
